labs/installing-core/k8s-manifests/kustomize/set-storageclass.yml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
    name: cjoc
spec:
    volumeClaimTemplates:
    - metadata:
        name: jenkins-home
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: ssd
        resources:
          requests:
              storage: "30Gi"
