labs/installing-core/k8s-manifests/kustomize/cloudbees-core.yml
---
# Source: cloudbees-core/templates/cjoc-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: cjoc
  labels:
    app: cjoc
    release: "cloudbees-core"
    component: "cloudbees-core-jenkins-master"
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: jnlp
      port: 50000
      targetPort: 50000
      protocol: TCP
  selector:
    component: "cloudbees-core-jenkins-master"
    com.cloudbees.cje.tenant: cjoc
  type: ClusterIP
---
# Source: cloudbees-core/templates/cjoc-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cjoc
  labels:
    app: cjoc
    release: "cloudbees-core"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: "http://$best_http_host/cjoc/teams-check/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  rules:
  - host: "cloudbees-core.example.com"
    http:
      paths:
      - path: /cjoc
        backend:
          serviceName: cjoc
          servicePort: 80
---
# Source: cloudbees-core/templates/cjoc-statefulset.yaml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: cjoc
  labels:
    com.cloudbees.cje.type: cjoc
    com.cloudbees.cje.tenant: cjoc
    release: "cloudbees-core"
    component: "cloudbees-core-cjoc"
spec:
  selector:
    matchLabels:
      com.cloudbees.cje.type: cjoc
      com.cloudbees.cje.tenant: cjoc
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  serviceName: cjoc
  template:
    metadata:
      name: cjoc
      labels:
        com.cloudbees.cje.type: cjoc
        com.cloudbees.cje.tenant: cjoc
        app: cjoc
        release: "cloudbees-core"
        component: "cloudbees-core-jenkins-master"
    spec:
      serviceAccountName: cjoc
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      terminationGracePeriodSeconds: 10
      containers:
      - name: jenkins
        image: "cloudbees/cloudbees-cloud-core-oc:2.176.4.3"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
        resources:
          limits:
            cpu: "1"
            memory: "1G"
          requests:
            cpu: "1"
            memory: "1G"

        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
          readOnly: false
        - name: jenkins-configure-jenkins-groovy
          mountPath: /var/jenkins_config/configure-jenkins.groovy.d
          readOnly: true
        livenessProbe:
            httpGet:
              path: /cjoc/login
              port: 8080
            initialDelaySeconds: 300
            timeoutSeconds: 5
            failureThreshold: 12
      volumes:
      - name: jenkins-configure-jenkins-groovy
        configMap:
          name: cjoc-configure-jenkins-groovy
  volumeClaimTemplates:
  - metadata:
      name: jenkins-home
      labels:
        app: cjoc
        release: "cloudbees-core"
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "20Gi"
---
# Source: cloudbees-core/templates/cjoc-route.yaml
