labs/installing-core/k8s-manifests/kustomize/set-ingress-host.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cjoc
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/app-root: "http://$best_http_host/cjoc/teams-check/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  tls:
  - hosts:
    - 104-196-106-80.nip.io
    secretName: cb-core-tls
  rules:
  - host: "104-196-106-80.nip.io"
    http:
      paths:
      - path: /cjoc
        backend:
          serviceName: cjoc
          servicePort: 80
